# veritra

./: AGENTS.md  CODEX.md  FABLE.md  OPUS.md  Plan.md  README.md  REMAINING-WORK.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WORK_IN_PROGRESS.md  audit-remediation-plan.md
.github/: dependabot.yml
audits-codex/: 01-release-gates.md  02-security-and-correctness.md  03-mobile-ui-and-sync.md  04-operations-performance-and-testing.md  README.md  audit-plan.md  deployment-risks.md  logical-issues.md  merged-findings.md  nice-to-haves.md  performance-issues.md  plan.md  production-readiness.md  security-issues.md  status.md  testing-gaps.md  ui-issues.md
audits-fable/: README.md  additional-findings.md  audit-plan.md  deployment-risks.md  logical-issues.md  nice-to-haves.md  performance-issues.md  production-readiness.md  security-issues.md  testing-gaps.md  ui-issues.md
crypto/rust/: Cargo.toml
crypto/rust/include/: veritra_crypto.h
crypto/rust/src/: ffi.rs  lib.rs  mls.rs
crypto/rust/src/mls/: state.rs
deploy/: docker-compose.yml
docs/: TODO.md  api.md  calls.md  crypto-protocol.md  crypto-research.md  deployment.md  plan.md  privacy.md  push-architecture.md  recovery.md  reference-research.md  threat-model.md
implementation/: 00-baseline.md  01-server-invariants.md  02-sync-consistency.md  03-mobile-storage-and-crypto.md  04-membership-and-safety.md  05-mobile-ux.md  06-deployment-and-recovery.md  07-performance.md  08-verification.md  09-deferred-roadmap.md  README.md  tasks.json
mobile/: README.md  pubspec.yaml
scripts/: dev.ps1  dev.sh  license-check.sh  (+5 more)
(+108 files in other folders)
